--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "jquery": "^3.5.1",
     "morgan": "~1.9.1",
+    "node-fetch": "^2.6.1",
     "popper.js": "^1.16.1",
     "pug": "^3.0.0",
     "sass": "^1.32.5",
