--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.5.1",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.1",
+    "pug": "^3.0.2",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
     "sqlite3": "^5.0.1"
