--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
     "morgan": "~1.9.1",
+    "mysql2": "^3.6.1",
     "node-fetch": "^2.6.1",
     "pug": "^3.0.2",
     "sequelize": "^6.3.5",
